// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[mutagen dnGroups config import-export] should create the dnGroups: the dnGroups have been created 1`] = `
Object {
  "stderr": "",
  "stdout": "+ dngroup [Environment/cfgObjectTest]
Completed. 1 object(s) imported.
",
}
`;

exports[`[mutagen dnGroups config import-export] should skip the same dnGroups: the dnGroups have been updated 1`] = `
Object {
  "stderr": "",
  "stdout": "= dngroup [Environment/cfgObjectTest]
Completed. 1 object(s) imported.
",
}
`;

exports[`[mutagen dnGroups config import-export] should throw exception when new dnGroups to import miss mandatory properties dnGroups: exception has been thrown 1`] = `
Object {
  "stderr": "Validation failed.
Missing properties:
  - dngroup [Environment/emptyCfgObjectTest]:
    - type
",
  "stdout": "",
}
`;

exports[`[mutagen dnGroups config import-export] should update the modified dnGroups: the modified dnGroups have been updated 1`] = `
Object {
  "stderr": "",
  "stdout": "~ dngroup [Environment/cfgObjectTest]
Completed. 1 object(s) imported.
",
}
`;
